backend/gate/envoy.yaml
admin:
  access_log_path: /dev/null
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901

static_resources:
  clusters:
    - connect_timeout: 1s
      lb_policy: round_robin
      load_assignment:
        cluster_name: booking_http_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: booking
                      port_value: 3000
      name: booking_http_cluster
      type: logical_dns

    - connect_timeout: 1s
      lb_policy: round_robin
      load_assignment:
        cluster_name: auth_http_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: auth
                      port_value: 3005
      name: auth_http_cluster
      type: logical_dns

    - connect_timeout: 1s
      lb_policy: round_robin
      load_assignment:
        cluster_name: storage_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: storage
                      port_value: 8080
      name: storage_cluster
      type: logical_dns

    - connect_timeout: 1s
      lb_policy: round_robin
      load_assignment:
        cluster_name: review_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: review
                      port_value: 8081
      name: review_cluster
      type: logical_dns

    - connect_timeout: 1s
      lb_policy: round_robin
      load_assignment:
        cluster_name: messaging_http_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: messaging
                      port_value: 8081
      name: messaging_http_cluster
      type: logical_dns

  listeners:
    - name: listener_main
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8081
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                route_config:
                  name: local_route
                  virtual_hosts:
                    - cors:
                        allow_headers: authorization,keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout,x-language,x-custom-headers,connect-protocol-version
                        allow_methods: GET, PUT, DELETE, PATCH, POST, OPTIONS
                        allow_origin_string_match:
                          - prefix: "*"
                        expose_headers: grpc-status,grpc-message
                        max_age: "1728000"
                      domains:
                        - "*"
                      name: cms_service
                      routes:
                        - match:
                            prefix: /booking/unauth-stores
                          route:
                            cluster: booking_http_cluster
                            prefix_rewrite: /unauth-stores
                            timeout: 60s
                          typed_per_filter_config:
                            envoy.filters.http.ext_authz:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute
                              disabled: true
                        - match:
                            prefix: /booking/unauth-books
                          route:
                            cluster: booking_http_cluster
                            prefix_rewrite: /unauth-books
                            timeout: 60s
                          typed_per_filter_config:
                            envoy.filters.http.ext_authz:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute
                              disabled: true
                        - match:
                            prefix: /booking/unauth-services
                          route:
                            cluster: booking_http_cluster
                            prefix_rewrite: /unauth-services
                            timeout: 60s
                          typed_per_filter_config:
                            envoy.filters.http.ext_authz:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute
                              disabled: true
                        - match:
                            prefix: /booking/unauth-teams
                          route:
                            cluster: booking_http_cluster
                            prefix_rewrite: /unauth-teams
                            timeout: 60s
                          typed_per_filter_config:
                            envoy.filters.http.ext_authz:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute
                              disabled: true
                        - match:
                            prefix: /booking/
                          route:
                            cluster: booking_http_cluster
                            prefix_rewrite: /
                            timeout: 60s
                        - match:
                            prefix: /auth/
                          route:
                            cluster: auth_http_cluster
                            prefix_rewrite: /auth/
                            timeout: 60s
                        - match:
                            prefix: /storage/image
                          route:
                            cluster: storage_cluster
                            prefix_rewrite: /image
                            timeout: 60s
                          typed_per_filter_config:
                            envoy.filters.http.ext_authz:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute
                              disabled: true
                        - match:
                            prefix: /storage/
                          route:
                            cluster: storage_cluster
                            prefix_rewrite: /
                            timeout: 60s
                        - match:
                            prefix: /authentication/
                          route:
                            cluster: auth_http_cluster
                            timeout: 60s
                          typed_per_filter_config:
                            envoy.filters.http.ext_authz:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute
                              disabled: true
                        - match:
                            prefix: /unauth/
                          route:
                            cluster: auth_http_cluster
                            prefix_rewrite: /unauth/
                            timeout: 60s
                          typed_per_filter_config:
                            envoy.filters.http.ext_authz:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute
                              disabled: true
                        - match:
                            prefix: /messaging
                          route:
                            cluster: messaging_http_cluster
                            timeout: 60s
                          typed_per_filter_config:
                            envoy.filters.http.ext_authz:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute
                              disabled: true
                        - match:
                            prefix: /review/list
                          route:
                            cluster: review_cluster
                            timeout: 60s
                          typed_per_filter_config:
                            envoy.filters.http.ext_authz:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute
                              disabled: true
                        - match:
                            prefix: /review
                          route:
                            cluster: review_cluster
                            timeout: 60s
                http_filters:
                  - name: envoy.filters.http.grpc_web
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_web.v3.GrpcWeb
                  - name: envoy.filters.http.cors
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors
                  - name: envoy.filters.http.ext_authz
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
                      http_service:
                        server_uri:
                          uri: http://auth:3005
                          cluster: auth_http_cluster
                          timeout: 20s
                        path_prefix: /authentication/validate
                        authorization_request:
                          allowed_headers:
                            patterns:
                              - exact: authorization
                        authorization_response:
                          allowed_upstream_headers:
                            patterns:
                              - exact: x-user-id
                              - exact: x-role
                              - exact: x-email
                              - exact: x-token
                              - exact: x-cms-role
                              - exact: x-store-id
                      transport_api_version: V3
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                stat_prefix: ingress_http
